Fix aligning on List bullet & List check

--- a/src/components/MaList/MaList.css
+++ b/src/components/MaList/MaList.css
@@ -1,14 +1,11 @@
 ul,
 ol {
   list-style: none;
+  margin: 0;
 }
 
 li {
   position: relative;
-}
-
-li:not(:last-child) {
-  margin-bottom: 0.5rem;
 }
 
 ul li::before {
@@ -20,24 +17,24 @@ ul.bullet li::before {
   background: url('../../assets/icons/bullet.svg');
   width: 0.625rem;
   height: 0.625rem;
-  top: 0.5rem;
+  top: 0.15rem;
   left: -1.375rem;
 }
 
 ul.bullet li.small::before {
-  top: 0.375rem;
+  top: 0;
 }
 
 ul.check li::before {
   background: url('../../assets/icons/check.svg');
   width: 1rem;
   height: 0.75rem;
-  top: 0.5rem;
+  top: 0.15rem;
   left: -1.5rem;
 }
 
 ul.check li.small::before {
-  top: 0.25rem;
+  top: 0;
 }
 
 ol {
